--- a/doc/memoria/userguide.tex
+++ b/doc/memoria/userguide.tex
@@ -56,4 +56,7 @@ That configuration file contains the following:
 \\[0.5cm]
 The three refers to the victory sign, and the 4 to the gun or L sign. To change the functionality the only thing needed is to change the programs written between the two dollar signs with the wanted one. 
 
+The user should take into account that when the program recognizes a gesture, a rectangle will appear in the window. In order to filter possible false positives, the user must remain in the same posture until the rectangle is completely filled for the correct execution of the task associated with the gesture. 
+
+
 \newpage
